[gd_scene load_steps=6 format=4 uid="uid://4xcfvd8c41bt"]

[ext_resource type="Script" path="res://scripts/interfaz_hacer_compra.gd" id="1_sgpft"]
[ext_resource type="TileSet" uid="uid://tr1qsvw38yju" path="res://tiles/tileset_paneles_mejoras.tres" id="2_5udt6"]
[ext_resource type="Texture2D" uid="uid://b8s774whutlxa" path="res://img/Tienda/MejoraCañaBuena.png" id="3_fbpq0"]
[ext_resource type="FontFile" uid="uid://ba61w4ocvfhxb" path="res://fonts/ExpressionPro.otf" id="4_wfyvm"]
[ext_resource type="FontFile" uid="uid://bfdlmvbyp8yqh" path="res://fonts/EquipmentPro.otf" id="5_jepd8"]

[node name="InterfazHacerCompra" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sgpft")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -598.0
offset_top = -256.0
offset_right = 603.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(0, -72)
tile_map_data = PackedByteArray("AAAkABIAAQAuAAIAAAAkABEAAQAuAAIAAAAkABMAAQAuAAIAAAAkABQAAQAuAAIAAAAkABAAAQAuAAIAAAAkABUAAQAuAAIAAAAkAA8AAQAuAAIAAAAkABYAAQAuAAMAAAAkAA4AAQAuAAEAAAAjABIAAQAuAAIAAAAiABIAAQAuAAIAAAAhABIAAQAuAAIAAAAlABIAAQAuAAIAAAAmABIAAQAuAAIAAAAnABIAAQAuAAIAAAAoABIAAQAuAAIAAAApABIAAQAuAAIAAAAgABIAAQAuAAIAAAAfABIAAQAuAAIAAAAjABUAAQAuAAIAAAAiABUAAQAuAAIAAAAhABUAAQAuAAIAAAAgABUAAQAuAAIAAAAfABUAAQAuAAIAAAAeABUAAQAuAAIAAAAdABUAAQAuAAIAAAAcABUAAQAuAAIAAAAbABUAAQAuAAIAAAAaABUAAQAuAAIAAAAZABUAAQAuAAIAAAAZABQAAQAuAAIAAAAZABMAAQAuAAIAAAAZABIAAQAuAAIAAAAZABEAAQAuAAIAAAAZABAAAQAuAAIAAAAZAA8AAQAuAAIAAAAaAA8AAQAuAAIAAAAbAA8AAQAuAAIAAAAcAA8AAQAuAAIAAAAdAA8AAQAuAAIAAAAeAA8AAQAuAAIAAAAfAA8AAQAuAAIAAAAgAA8AAQAuAAIAAAAhAA8AAQAuAAIAAAAiAA8AAQAuAAIAAAAjAA8AAQAuAAIAAAAjABYAAQAuAAMAAAAiABYAAQAuAAMAAAAhABYAAQAuAAMAAAAgABYAAQAuAAMAAAAfABYAAQAuAAMAAAAeABYAAQAuAAMAAAAdABYAAQAuAAMAAAAcABYAAQAuAAMAAAAbABYAAQAuAAMAAAAZABYAAQAuAAMAAAAaABYAAQAuAAMAAAAlABYAAQAuAAMAAAAmABYAAQAuAAMAAAAnABYAAQAuAAMAAAAoABYAAQAuAAMAAAApABYAAQAuAAMAAAAqABYAAQAuAAMAAAArABYAAQAuAAMAAAAsABYAAQAuAAMAAAAtABYAAQAuAAMAAAAuABYAAQAuAAMAAAAvABYAAQAuAAMAAAAwABYAAQAvAAMAAAAYABYAAQAtAAMAAAAwAA8AAQAvAAIAAAAYAA8AAQAtAAIAAAAYAA4AAQAtAAEAAAAjAA4AAQAuAAEAAAAiAA4AAQAuAAEAAAAhAA4AAQAuAAEAAAAgAA4AAQAuAAEAAAAfAA4AAQAuAAEAAAAeAA4AAQAuAAEAAAAdAA4AAQAuAAEAAAAcAA4AAQAuAAEAAAAbAA4AAQAuAAEAAAAaAA4AAQAuAAEAAAAZAA4AAQAuAAEAAAAYABAAAQAtAAIAAAAYABEAAQAtAAIAAAAYABIAAQAtAAIAAAAYABMAAQAtAAIAAAAYABQAAQAtAAIAAAAYABUAAQAtAAIAAAAwAA4AAQAvAAEAAAAwABAAAQAvAAIAAAAwABEAAQAvAAIAAAAwABIAAQAvAAIAAAAwABMAAQAvAAIAAAAwABQAAQAvAAIAAAAwABUAAQAvAAIAAAAvAA4AAQAuAAEAAAAuAA4AAQAuAAEAAAAtAA4AAQAuAAEAAAAsAA4AAQAuAAEAAAArAA4AAQAuAAEAAAAqAA4AAQAuAAEAAAApAA4AAQAuAAEAAAAoAA4AAQAuAAEAAAAnAA4AAQAuAAEAAAAmAA4AAQAuAAEAAAAlAA4AAQAuAAEAAAAuABUAAQAuAAIAAAAtABUAAQAuAAIAAAAsABUAAQAuAAIAAAArABUAAQAuAAIAAAAqABUAAQAuAAIAAAApABUAAQAuAAIAAAAoABUAAQAuAAIAAAAnABUAAQAuAAIAAAAmABUAAQAuAAIAAAAlABUAAQAuAAIAAAAvABUAAQAuAAIAAAAvABQAAQAuAAIAAAAvABMAAQAuAAIAAAAvABIAAQAuAAIAAAAvABEAAQAuAAIAAAAvABAAAQAuAAIAAAAvAA8AAQAuAAIAAAAuAA8AAQAuAAIAAAAtAA8AAQAuAAIAAAAsAA8AAQAuAAIAAAArAA8AAQAuAAIAAAAqAA8AAQAuAAIAAAApAA8AAQAuAAIAAAAoAA8AAQAuAAIAAAAnAA8AAQAuAAIAAAAmAA8AAQAuAAIAAAAlAA8AAQAuAAIAAAAlABMAAQAuAAIAAAAmABMAAQAuAAIAAAAnABMAAQAuAAIAAAAoABMAAQAuAAIAAAApABMAAQAuAAIAAAAqABIAAQAuAAIAAAArABIAAQAuAAIAAAArABMAAQAuAAIAAAAsABQAAQAuAAIAAAAtABQAAQAuAAIAAAAtABMAAQAuAAIAAAAuABMAAQAuAAIAAAAuABIAAQAuAAIAAAAuABEAAQAuAAIAAAAtABIAAQAuAAIAAAAsABMAAQAuAAIAAAAuABAAAQAuAAIAAAAtABAAAQAuAAIAAAAsABAAAQAuAAIAAAAsABEAAQAuAAIAAAArABEAAQAuAAIAAAArABQAAQAuAAIAAAAuABQAAQAuAAIAAAAtABEAAQAuAAIAAAAsABIAAQAuAAIAAAAqABMAAQAuAAIAAAApABQAAQAuAAIAAAAoABQAAQAuAAIAAAAnABQAAQAuAAIAAAAmABQAAQAuAAIAAAAlABQAAQAuAAIAAAAqABQAAQAuAAIAAAArABAAAQAuAAIAAAAqABAAAQAuAAIAAAApABAAAQAuAAIAAAAoABAAAQAuAAIAAAAnABAAAQAuAAIAAAAmABAAAQAuAAIAAAAlABAAAQAuAAIAAAAjABAAAQAuAAIAAAAiABAAAQAuAAIAAAAiABEAAQAuAAIAAAAjABMAAQAuAAIAAAAqABEAAQAuAAIAAAApABEAAQAuAAIAAAAoABEAAQAuAAIAAAAnABEAAQAuAAIAAAAmABEAAQAuAAIAAAAlABEAAQAuAAIAAAAjABEAAQAuAAIAAAAhABAAAQAuAAIAAAAgABAAAQAuAAIAAAAfABAAAQAuAAIAAAAeABAAAQAuAAIAAAAdABAAAQAuAAIAAAAcABAAAQAuAAIAAAAbABAAAQAuAAIAAAAbABEAAQAuAAIAAAAbABIAAQAuAAIAAAAbABMAAQAuAAIAAAAcABMAAQAuAAIAAAAdABMAAQAuAAIAAAAdABQAAQAuAAIAAAAeABQAAQAuAAIAAAAfABQAAQAuAAIAAAAgABQAAQAuAAIAAAAhABQAAQAuAAIAAAAiABQAAQAuAAIAAAAjABQAAQAuAAIAAAAcABQAAQAuAAIAAAAbABQAAQAuAAIAAAAaABQAAQAuAAIAAAAaABMAAQAuAAIAAAAcABIAAQAuAAIAAAAdABIAAQAuAAIAAAAeABIAAQAuAAIAAAAfABMAAQAuAAIAAAAgABMAAQAuAAIAAAAhABMAAQAuAAIAAAAiABMAAQAuAAIAAAAhABEAAQAuAAIAAAAgABEAAQAuAAIAAAAfABEAAQAuAAIAAAAeABEAAQAuAAIAAAAdABEAAQAuAAIAAAAcABEAAQAuAAIAAAAaABAAAQAuAAIAAAAaABEAAQAuAAIAAAAaABIAAQAuAAIAAAAeABMAAQAuAAIAAAAYABsAAQAtAAEAAAAYAB4AAQAtAAMAAAAwAB4AAQAvAAMAAAAwABsAAQAvAAEAAAAwABwAAQAvAAIAAAAwAB0AAQAvAAIAAAAuABsAAQAuAAEAAAAvABsAAQAuAAEAAAAvAB4AAQAuAAMAAAAuAB4AAQAuAAMAAAAtAB4AAQAuAAMAAAAsAB4AAQAuAAMAAAArAB4AAQAuAAMAAAAqAB4AAQAuAAMAAAApAB4AAQAuAAMAAAAoAB4AAQAuAAMAAAAnAB4AAQAuAAMAAAAmAB4AAQAuAAMAAAAlAB4AAQAuAAMAAAAkAB4AAQAuAAMAAAAjAB4AAQAuAAMAAAAiAB4AAQAuAAMAAAAhAB4AAQAuAAMAAAAgAB4AAQAuAAMAAAAfAB4AAQAuAAMAAAAeAB4AAQAuAAMAAAAdAB4AAQAuAAMAAAAcAB4AAQAuAAMAAAAbAB4AAQAuAAMAAAAaAB4AAQAuAAMAAAAZAB4AAQAuAAMAAAAtABsAAQAuAAEAAAAsABsAAQAuAAEAAAArABsAAQAuAAEAAAAqABsAAQAuAAEAAAApABsAAQAuAAEAAAAoABsAAQAuAAEAAAAnABsAAQAuAAEAAAAmABsAAQAuAAEAAAAlABsAAQAuAAEAAAAkABsAAQAuAAEAAAAjABsAAQAuAAEAAAAiABsAAQAuAAEAAAAhABsAAQAuAAEAAAAgABsAAQAuAAEAAAAfABsAAQAuAAEAAAAeABsAAQAuAAEAAAAdABsAAQAuAAEAAAAcABsAAQAuAAEAAAAbABsAAQAuAAEAAAAaABsAAQAuAAEAAAAZABsAAQAuAAEAAAAYABwAAQAtAAIAAAAYAB0AAQAtAAIAAAAvAB0AAQAuAAIAAAAvABwAAQAuAAIAAAAuABwAAQAuAAIAAAAtABwAAQAuAAIAAAAsABwAAQAuAAIAAAArABwAAQAuAAIAAAAqABwAAQAuAAIAAAApABwAAQAuAAIAAAAoABwAAQAuAAIAAAAnABwAAQAuAAIAAAAmABwAAQAuAAIAAAAlABwAAQAuAAIAAAAkABwAAQAuAAIAAAAjABwAAQAuAAIAAAAiABwAAQAuAAIAAAAhABwAAQAuAAIAAAAgABwAAQAuAAIAAAAfABwAAQAuAAIAAAAeABwAAQAuAAIAAAAdABwAAQAuAAIAAAAcABwAAQAuAAIAAAAbABwAAQAuAAIAAAAaABwAAQAuAAIAAAAZABwAAQAuAAIAAAAZAB0AAQAuAAIAAAAaAB0AAQAuAAIAAAAbAB0AAQAuAAIAAAAcAB0AAQAuAAIAAAAdAB0AAQAuAAIAAAAeAB0AAQAuAAIAAAAfAB0AAQAuAAIAAAAgAB0AAQAuAAIAAAAhAB0AAQAuAAIAAAAiAB0AAQAuAAIAAAAjAB0AAQAuAAIAAAAkAB0AAQAuAAIAAAAlAB0AAQAuAAIAAAAmAB0AAQAuAAIAAAAnAB0AAQAuAAIAAAAoAB0AAQAuAAIAAAApAB0AAQAuAAIAAAAqAB0AAQAuAAIAAAArAB0AAQAuAAIAAAAtAB0AAQAuAAIAAAAuAB0AAQAuAAIAAAAsAB0AAQAuAAIAAAAbACAAAgAFAAMAAAAbACMAAgAFAAUAAAAtACAAAgAHAAMAAAAtACMAAgAHAAUAAAAqACMAAgAFAAUAAAAeACMAAgAHAAUAAAAeACAAAgAHAAMAAAAqACAAAgAFAAMAAAAsACAAAgAGAAMAAAArACAAAgAGAAMAAAAdACAAAgAGAAMAAAAcACAAAgAGAAMAAAAbACEAAgAFAAQAAAAbACIAAgAFAAQAAAAqACEAAgAFAAQAAAAqACIAAgAFAAQAAAAtACEAAgAHAAQAAAAtACIAAgAHAAQAAAAeACEAAgAHAAQAAAAeACIAAgAHAAQAAAAdACMAAgAGAAUAAAAcACMAAgAGAAUAAAAsACMAAgAGAAUAAAArACMAAgAGAAUAAAAsACIAAgAGAAQAAAArACIAAgAGAAQAAAArACEAAgAGAAQAAAAsACEAAgAGAAQAAAAcACIAAgAGAAQAAAAdACEAAgAGAAQAAAAcACEAAgAGAAQAAAAdACIAAgAGAAQAAAAeABcAAQAwAAEAAAAeABoAAQAwAAMAAAAkABoAAQAxAAMAAAAlABoAAQAxAAMAAAAjABoAAQAxAAMAAAAqABoAAQAyAAMAAAAqABcAAQAyAAEAAAAqABgAAQAyAAIAAAAqABkAAQAyAAIAAAApABoAAQAxAAMAAAAoABoAAQAxAAMAAAAnABoAAQAxAAMAAAAmABoAAQAxAAMAAAAiABoAAQAxAAMAAAAhABoAAQAxAAMAAAAgABoAAQAxAAMAAAAfABoAAQAxAAMAAAAeABgAAQAwAAIAAAAeABkAAQAwAAIAAAApABcAAQAxAAEAAAAoABcAAQAxAAEAAAAnABcAAQAxAAEAAAAmABcAAQAxAAEAAAAlABcAAQAxAAEAAAAkABcAAQAxAAEAAAAjABcAAQAxAAEAAAAiABcAAQAxAAEAAAAhABcAAQAxAAEAAAAgABcAAQAxAAEAAAAfABcAAQAxAAEAAAAfABkAAQAxAAIAAAAgABkAAQAxAAIAAAAhABkAAQAxAAIAAAAiABkAAQAxAAIAAAAjABkAAQAxAAIAAAAkABkAAQAxAAIAAAAlABkAAQAxAAIAAAAmABkAAQAxAAIAAAAnABkAAQAxAAIAAAAoABkAAQAxAAIAAAApABkAAQAxAAIAAAApABgAAQAxAAIAAAAoABgAAQAxAAIAAAAnABgAAQAxAAIAAAAmABgAAQAxAAIAAAAlABgAAQAxAAIAAAAkABgAAQAxAAIAAAAjABgAAQAxAAIAAAAiABgAAQAxAAIAAAAhABgAAQAxAAIAAAAgABgAAQAxAAIAAAAfABgAAQAxAAIAAAA=")
tile_set = ExtResource("2_5udt6")

[node name="ImagenMejora" type="Sprite2D" parent="."]
position = Vector2(585, 99)
texture = ExtResource("3_fbpq0")

[node name="NombreItem" type="Label" parent="."]
layout_mode = 0
offset_left = 388.0
offset_top = 156.0
offset_right = 781.0
offset_bottom = 203.0
theme_override_fonts/font = ExtResource("4_wfyvm")
theme_override_font_sizes/font_size = 32
text = "CAÑA BUENA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescripcionItem" type="Label" parent="."]
layout_mode = 0
offset_left = 388.0
offset_top = 201.0
offset_right = 780.0
offset_bottom = 291.0
theme_override_fonts/font = ExtResource("4_wfyvm")
theme_override_font_sizes/font_size = 16
text = "Permite que los pingüinos que la lleven equipada reduzcan el intervalo de pesca de 6-7 segundos a 5-6 segundos."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
position = Vector2(0, -9)
tile_map_data = PackedByteArray("AAAcAB0ABAAeAGwAAAAcAB4ABAAeAG0AAAAdAB0ABAAfAGwAAAAdAB4ABAAfAG0AAAArAB0ABAAeAG4AAAArAB4ABAAeAG8AAAAsAB0ABAAfAG4AAAAsAB4ABAAfAG8AAAA=")
tile_set = ExtResource("2_5udt6")

[node name="Confirmacion compra item" type="Label" parent="."]
layout_mode = 0
offset_left = 388.0
offset_top = 361.0
offset_right = 780.0
offset_bottom = 420.0
theme_override_fonts/font = ExtResource("4_wfyvm")
theme_override_font_sizes/font_size = 32
text = "¿Estás seguro de comprar este objeto?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Aceptar" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 433.0
offset_top = 442.0
offset_right = 495.0
offset_bottom = 502.0

[node name="Rechazar" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 673.0
offset_top = 442.0
offset_right = 735.0
offset_bottom = 502.0

[node name="Coste" type="Label" parent="."]
layout_mode = 0
offset_left = 569.0
offset_top = 135.0
offset_right = 604.0
offset_bottom = 151.0
theme_override_fonts/font = ExtResource("5_jepd8")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="TuDineroLayer" type="Label" parent="."]
layout_mode = 0
offset_left = 483.0
offset_top = 297.0
offset_right = 684.0
offset_bottom = 329.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_jepd8")
theme_override_font_sizes/font_size = 32
text = "Dinero actual"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TuDinero2" type="Label" parent="."]
layout_mode = 0
offset_left = 484.0
offset_top = 324.0
offset_right = 685.0
offset_bottom = 356.0
theme_override_colors/font_color = Color(0.200463, 0.631559, 0.351976, 1)
theme_override_fonts/font = ExtResource("5_jepd8")
theme_override_font_sizes/font_size = 32
text = "400"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Aceptar" to="." method="_on_aceptar_pressed"]
[connection signal="pressed" from="Rechazar" to="." method="_on_rechazar_pressed"]
